test/it/code-samples/positive/pages-custom-npm-dependencies/core.js
import a from "lodash"
import b from "custom-module"
b.anyFn()
a.anyProperty
