test/it/code-samples/negative/backend-unknown-module/unknown.js
import a from "custom-module";
import b from "custom-modulezzz"
const t = wixUnknownModule.fn();
a();
b();